--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,55 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.big-container{
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    border: 1px solid red;
+
+    position: relative;
+}
+
+/* -------HEADER------- */
+/* Nav */
+header section.nav{
+    width: 100%;
+    height: 10vh;
+    background-color: antiquewhite;
+
+    justify-content: space-between;
+}
+
+nav.main-nav ul{
+    list-style: none;
+}
+
+nav.main-nav ul li{
+    margin: 0 1rem;
+    display: inline-block;
+
+}
+
+/* Jumbo */
+header section.jumbo{
+    width: 100%;
+    height: 70vh;
+    background-color: #b4d0e7;
+}
+
+div.jumbo-img{
+    width: 500px;
+    height: 300px;
+   position: absolute;
+   bottom: -35px;
+   right: 0; 
+
+   background-color: blueviolet;
+}
