--- a/css/style.css
+++ b/css/style.css
@@ -149,29 +149,28 @@ section.business-operations{
 
 div.business-operation-row{
     width: 100%;
-    height: 50%;
     border: 1px solid blue;
-    margin-top: 2rem;
+    padding-top: 1rem;
 }
 
 article.business-operation-card{
     width: calc((100% / 3) - .4rem);
-    height: 100%;
+    height: 350px;
 
-    margin: .4rem;
+    margin: 0 .4rem;
     background-color: blueviolet;
 }
 
 div.business-operation-card-box-img{
     width: 100%;
     height: 40%;
-    border: 1px solid red;
+    border: 1px solid goldenrod;
 }
 
 div.business-operation-card-box-txt{
     width: 100%;
     height: 60%;
-    background-color:  grey;
+    background-color: grey;
 }
 
 
