--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ div.business-operation-card-box-txt{
     background-color: grey;
 }
 
-/* Team*/
+/* Customer data*/
 section.customer-data{
     width: 100%;
      height: 45vh;
@@ -181,4 +181,32 @@ section.customer-data{
     background-color: grey;
 }
 
+/* Company Collaboration*/
+section.company-collaboration{
+    width: 100%;
+    height: 70vh;
+    background-color: aqua;
+}
 
+div.company-collaboration-description{
+    width: 30%;
+    height: 100%;
+    background-color:darkgoldenrod;
+
+}
+
+div.company-collaboration-square{
+    width: 35%;
+    height: 100%;
+    background-color: coral;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.company-collaboration-square-box{
+    width: calc(100% /2);
+    height: calc(100% /2);
+    background-color: blueviolet;
+    border: 1px solid black;
+}
