--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body{
     border: 1px solid red;
 }
 
+.bg-blue{
+    background-color: #b4d0e7 ;
+}
+
 /* -------HEADER------- */
 /* Nav */
 header section.nav{
@@ -173,12 +177,11 @@ div.business-operation-card-box-txt{
     background-color: grey;
 }
 
-/* Customer data*/
+/* Customer data - Try Dropbox*/
 section.customer-data{
     width: 100%;
      height: 45vh;
     padding: 3rem 0;
-    background-color: grey;
 }
 
 /* Company Collaboration*/
