--- a/css/style.css
+++ b/css/style.css
@@ -213,3 +213,22 @@ div.company-collaboration-square-box{
     background-color: blueviolet;
     border: 1px solid black;
 }
+
+/* Faq*/
+
+section.faq{
+    width: 100%;
+    height: 80vh;
+    padding: 3rem 0;
+}
+
+div.faq-section{
+    margin-top: 2rem;
+}
+
+div.faq-section span{
+    display: block;
+    padding: 1.5rem 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
