--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ body{
     align-items: center;
 }
 
+.flex-around{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .big-container{
     width: 70%;
     height: 100%;
@@ -231,4 +237,43 @@ div.faq-section span{
     padding: 1.5rem 0;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+}
+
+/* -------FOOTER------- */
+.separator-line{
+    width: 10%;
+    height: 3px;
+    background-color: white;
+    margin: 2rem 0;
+}
+
+footer{
+    padding-top: 2rem;
+    background-color: black;
+    color: white;
+}
+
+/* Top Footer */
+section.top-footer{
+    width: 100%;
+    height: 45%;
+}
+
+nav.footer-navs{
+    border: 1px solid white;
+}
+
+nav.footer-navs ul li{
+    list-style: none;
+}
+
+nav.footer-navs ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+/* Bottom Footer */
+
+section.bottom-footer{
+    padding: 1.5rem;
 }
