--- a/css/style.css
+++ b/css/style.css
@@ -84,20 +84,19 @@ div.jumbo-img{
 /* Business Plane */
 section.business-plane{
     width: 100%;
-    height: 130vh;
+    height: auto;
     background-color: rgb(114, 114, 114);
     padding: 5rem 0 2rem 0 ;
 }
 
 div.box-plane-general-section{
     width: 100%;
-    height: 100%;
     display: flex;
 }
 
 div.box-plane-business{
     width: calc((100% / 3) - .4rem);
-    height: 80%;
+    height: 85vh;
     background-color: cadetblue;
     margin: 0 .4rem;
 }
@@ -153,8 +152,9 @@ div.right-findpartner-txt{
 /* Business operations */
 section.business-operations{
     width: 100%;
-    height: 150vh;
+    height: auto;
     padding: 5rem 0;
+    background-color: green;
 }
 
 div.business-operation-row{
