--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 /* -----GENERAL----- */
 body{
     font-family: 'Open Sans', sans-serif;
+    min-width: 1110px;
 }
 
 .flex-center{
@@ -42,14 +43,48 @@ body{
     background-color: #b4d0e7 ;
 }
 
+/* Buttons */
+
+.btn-default{
+    border: none;
+    padding: .6rem;
+    cursor: pointer;
+}
+.btn-default:hover{
+    background-color: rgb(168, 168, 168);
+}
+
+.btn-blue{
+    background-color: #0061ff;
+    color: white;
+}
+.btn-blue:hover{
+    background-color: #3c87ff;
+}
+
+.btn-white-border{
+    background-color: white;
+    border: 1px solid black;
+}
+
+.btn-white{
+    background-color: white;
+}
+
 /* -------HEADER------- */
 /* Nav */
 header section.nav{
     width: 100%;
     height: 10vh;
-    background-color: antiquewhite;
+    background-color: white;
 
     justify-content: space-between;
+    padding: 0 1rem;
+}
+
+div.left-nav-content>img{
+    margin-right: 1.5rem;
+    cursor: pointer;
 }
 
 nav.main-nav ul{
@@ -57,9 +92,19 @@ nav.main-nav ul{
 }
 
 nav.main-nav ul li{
-    margin: 0 1rem;
+    margin: 0 .6rem;
     display: inline-block;
+    cursor: pointer;
+    font-size: .95rem;
+}
 
+nav.main-nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+div.btn{
+    margin-left: .8rem;
 }
 
 /* Jumbo */
