--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* -----GENERAL----- */
 body{
     font-family: 'Open Sans', sans-serif;
-    min-width: 1110px;
+    min-width: 1350px;
 }
 
 .flex-center{
@@ -27,7 +27,6 @@ body{
     width: 70%;
     height: 100%;
     margin: 0 auto;
-    border: 1px solid red;
 
     position: relative;
 }
@@ -49,6 +48,7 @@ body{
     border: none;
     padding: .6rem;
     cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
 }
 .btn-default:hover{
     background-color: rgb(168, 168, 168);
@@ -70,6 +70,8 @@ body{
 .btn-white{
     background-color: white;
 }
+
+
 
 /* -------HEADER------- */
 /* Nav */
@@ -110,24 +112,63 @@ div.btn{
 /* Jumbo */
 header section.jumbo{
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     background-color: #b4d0e7;
+
+    padding: 0 1rem;
+}
+
+section.jumbo h1{
+    font-size: 3.6rem;
+}
+
+div.jumbo-txt-block{
+    width: calc(100% - 620px);
+
+    margin-top: 2rem;
+}
+
+div.jumbo-txt-block p{
+    font-size: .8rem;
+}
+
+div.jumbo-btn{
+    margin-top: 1.5rem;
+    width: 65%;
+    flex-direction: column;
+}
+
+div.jumbo-btn button{
+    margin-bottom: .8rem;
+    width: 100%;
 }
 
 div.jumbo-img{
-    width: 500px;
+    width: 620px;
     height: 300px;
    position: absolute;
-   bottom: -35px;
+   bottom: -10px;
    right: 0; 
+}
 
-   background-color: blueviolet;
+div.jumbo-img>img{
+    width: 100%;
+}
+
+div.bottom-arrow{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    font-size: 2.5rem;
 }
 
 /* -------MAIN------- */
 
 /* Business Plane */
 section.business-plane{
+    margin-top: 3rem;
+
     width: 100%;
     height: auto;
     background-color: rgb(114, 114, 114);
