--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ body{
     width: 60%;
     height: 100%;
     margin: 0 auto;
-    border: 1px solid red;
 }
 
 .bg-blue{
@@ -197,42 +196,83 @@ div.label div.annua{
 div.box-plane-general-section{
     width: 100%;
     display: flex;
+    
 }
 
 div.box-plane-business{
     width: calc((100% / 3) - .4rem);
-    height: 110vh;
-    background-color: cadetblue;
+    height: 130vh;
     margin: 0 .4rem;
+    border: 1px solid black;
 }
 
 div.box-plane-business span{
     display: block;
+    margin-top: .5rem;
 }
 
 div.title-box-plane{
     height: 5%;
     width: 100%;
-    background-color: coral;
+    border-bottom: 1px solid black;
 }
 
 div.inside-txt-box{
     padding: 1rem .8rem;
 }
 
+div.inside-txt-box h3{
+    font-size: 1.5rem;
+}
+
+div.inside-txt-box span.price{
+    margin: .8rem 0;
+    font-size: .9rem;
+    font-weight: bold;
+}
+
+div.inside-txt-box span.time{
+    color: grey;
+}
 
 div.box-plane-business section.features{
-    margin-top: 3rem;
+    margin-top: 2.5rem;
+}
+
+div.box-plane-business section.features span{
+    margin: .8rem 0;
+    font-size: .9rem;
+}
+
+span.buy-now{
+    font-size: .9rem;
+}
+
+span.buy-now a{
+    text-decoration: none;
+    color: #0061ff;
+    border-bottom: 1px solid #0061ff;
 }
 
 div.free-trial-day{
-    margin: 2rem 0;
+    margin: 3rem 0 1.5rem;
+}
+
+section.highlights-plane h4{
+    font-size: 1rem;
+    margin-bottom: 1.8rem;
 }
 
 span.highlight{
-    font-size: .8rem;
+    font-size: .9rem;
     margin: 1rem 0;
 }
+
+span.highlight i{
+    color: #0061ff;
+}
+
+
 
 /* Team*/
 
