--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ div.separator-box-business-plane{
     margin: 2rem 0;
 }
 
+h3{
+    font-size: 1.5rem;
+}
+
 /* Buttons */
 
 .btn-default{
@@ -201,7 +205,7 @@ div.box-plane-general-section{
 
 div.box-plane-business{
     width: calc((100% / 3) - .4rem);
-    height: 130vh;
+    height: 850px;
     margin: 0 .4rem;
     border: 1px solid black;
 }
@@ -221,9 +225,6 @@ div.inside-txt-box{
     padding: 1rem .8rem;
 }
 
-div.inside-txt-box h3{
-    font-size: 1.5rem;
-}
 
 div.inside-txt-box span.price{
     margin: .8rem 0;
@@ -278,23 +279,49 @@ span.highlight i{
 
 section.team{
     width: 100%;
-    height: 40vh;
+    height: auto;
     padding: 3rem 0;
 }
 
 div.box-team{
     width: 100%;
     height: 100%;
-    background-color: cadetblue;
+    border: 1px solid black;
 }
-
 
 div.title-team{
     height: 20%;
     width: 100%;
-    background-color: coral;
+    border-bottom: 1px solid black;
 }
 
+div.team-section-info{
+    display: flex;
+    padding: 1.5rem 1rem;
+}
+
+section.left-team-info{
+    width: 75%;
+    height: 100%;
+}
+
+section.left-team-info span{
+    display: block;
+    font-weight: bold;
+    margin: .5rem 0 3rem; 
+    font-size: .9rem;
+}
+
+section.left-team-info p{
+    font-size: .8rem;
+}
+
+div.right-bnt-team-section{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
 /* Find Partner*/
 
 section.find-partner{
