--- a/css/style.css
+++ b/css/style.css
@@ -325,21 +325,36 @@ div.right-bnt-team-section{
 /* Find Partner*/
 
 section.find-partner{
+    min-height: 424px;
+    max-height: 584px;
     height: 90vh;
     padding: 5rem 0;
-    background-color: gray;
 }
 
 div.left-findpartner-img{
     width: 55%;
     height: 100%;
-    background-color: brown;
+    background-image: url(../img/partner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+div.left-findpartner-img img{
+    height: 100%;
 }
 
 div.right-findpartner-txt{
     width: 45%;
     height: 100%;
-    background-color: rgb(42, 165, 83);
+    padding: 1rem;
+}
+
+div.right-findpartner-txt p{
+    margin: 1.5rem 0;
+}
+
+div.right-findpartner-txt button{
+    margin-top: .8rem;
 }
 
 /* Business operations */
