--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* -----GENERAL----- */
 body{
     font-family: 'Open Sans', sans-serif;
-    min-width: 1350px;
+    min-width: 1348px;
 }
 
 .flex-center{
@@ -361,13 +361,11 @@ div.right-findpartner-txt button{
 section.business-operations{
     width: 100%;
     height: auto;
-    padding: 5rem 0;
-    background-color: green;
+    padding: 3rem 0;
 }
 
 div.business-operation-row{
     width: 100%;
-    border: 1px solid blue;
     padding-top: 1rem;
 }
 
@@ -376,21 +374,34 @@ article.business-operation-card{
     height: 350px;
 
     margin: 0 .4rem;
-    background-color: blueviolet;
 }
 
 div.business-operation-card-box-img{
     width: 100%;
-    height: 40%;
-    border: 1px solid goldenrod;
+    height: 45%;
+}
+
+div.business-operation-card-box-img img{
+    height: 100%;
 }
 
 div.business-operation-card-box-txt{
     width: 100%;
-    height: 60%;
-    background-color: grey;
+    height: auto;
 }
 
+div.business-operation-card-box-txt h3{
+    font-size: 1.2rem;
+}
+
+div.business-operation-card-box-txt p{
+    margin-top: 1rem;
+    font-size: .8rem;
+}
+
+.bottom-row{
+    margin-top: 4rem;
+}
 /* Customer data - Try Dropbox*/
 section.customer-data{
     width: 100%;
