--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@ div.btn{
 
 /* Jumbo */
 header section.jumbo{
+    max-height: 490px;
+    min-height: 490px;
     width: 100%;
     height: 75vh;
     background-color: #b4d0e7;
