--- a/css/style.css
+++ b/css/style.css
@@ -427,13 +427,12 @@ section.customer-data h2{
 /* Company Collaboration*/
 section.company-collaboration{
     width: 100%;
-    background-color: aqua;
 }
 
 div.company-collaboration-square{
     width: calc(100vw / 3 );
     height: calc(100vw / 3);
-    background-color: coral;
+    background-color: #f5f5f5;
 
     display: flex;
     flex-wrap: wrap;
@@ -442,10 +441,60 @@ div.company-collaboration-square{
 div.company-collaboration-square-box{
     width: calc(100% /2);
     height: calc(100% /2);
-    background-color: blueviolet;
-    border: 1px solid black;
 }
 
+div.company-collaboration-square-box img{
+    width: 65%;
+    filter: invert();
+}
+
+/* Center Box */
+div.company-collaboration-square-center-txt{
+    padding: 2rem;
+    flex-direction: column;
+}
+
+div.company-collaboration-square-center-txt img{
+    width: 40%;
+}
+
+div.company-collaboration-square-center-txt p{
+    margin: 1rem 0 3rem;
+}
+
+/* ID img */
+#designit{
+    background-color: #A2D39B;
+    border: 10px solid #D1E9CD;
+}
+
+#asu{
+    background-color: #61082B;
+}
+
+#uf-florida{
+    background-color: #0093CE;
+}
+
+#topps{
+    background-color: #FF1C1C;
+}
+
+#world-bicycle{
+    background-color: #d5001f;
+}
+
+#hearst-corp{
+    background-color: #b4d0e7;
+}
+
+#lonely-planet{
+    background-color: #0d2481;
+}
+
+#clear-channel{
+    background-color: #ffd830;
+}
 /* Faq*/
 
 section.faq{
