--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ div.business-operation-card-box-txt p{
 .bottom-row{
     margin-top: 4rem;
 }
-/* Customer data - Try Dropbox*/
+/* Customer data*/
 section.customer-data{
     width: 100%;
     /* height: 45vh; */
@@ -495,6 +495,29 @@ div.company-collaboration-square-center-txt p{
 #clear-channel{
     background-color: #ffd830;
 }
+
+/* Try Dropbox */
+section.try-dropbox{
+    width: 100%;
+    padding: 3.5rem;
+}
+
+section.try-dropbox h2{
+    font-size: 2rem;
+    color: #61082b;
+}
+
+div.try-dropbox-left{
+    width: 60%;
+    height: 100%;
+    padding: 1rem;
+}
+
+div.try-dropbox-right-btn{
+    width: 40%;
+    height: 100%;
+}
+
 /* Faq*/
 
 section.faq{
