--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ div.faq-section-close i{
 
 
 footer{
-    padding-top: 2rem;
+    padding: 2rem;
     background-color: black;
     color: white;
 }
@@ -571,6 +571,7 @@ footer{
 section.top-footer{
     width: 100%;
     height: 45%;
+    margin-top: 3rem;
 }
 
 nav.footer-navs{
@@ -596,4 +597,14 @@ nav.footer-navs ul li a{
 
 section.bottom-footer{
     padding: 1.5rem;
+}
+
+section.bottom-footer span.languages{
+    color: grey;
+    font-size: .9rem;
+}
+
+section.bottom-footer span.languages i.fa-caret-up{
+    vertical-align: middle;
+    margin: .0rem .3rem;
 }
