--- a/css/style.css
+++ b/css/style.css
@@ -103,10 +103,17 @@ h3{
 /* Nav */
 header section.nav{
     width: 100%;
-    height: 10vh;
+    height: 70px;
     background-color: white;
 
     padding: 0 1rem;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    box-shadow: 0px 1.5px 11px -2px #000000;
 }
 
 div.left-nav-content>img{
@@ -143,6 +150,7 @@ header section.jumbo{
     background-color: #b4d0e7;
 
     padding: 0 1rem;
+    margin-top: 70px;
 }
 
 section.jumbo h1{
