--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ h3{
     background-color: rgba(255, 255, 255, 0);
 }
 .btn-default:hover{
-    background-color: rgb(168, 168, 168);
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .btn-blue{
@@ -551,13 +552,26 @@ div.faq-section{
 div.faq-section-close{
     padding: 2rem 0;
     border-bottom: 1px solid grey;
-
+    cursor: pointer;
     justify-content: space-between;
 }
 
+
+div.faq-section-close:hover span{
+    transition: all .5s;
+    color: #0093CE;
+}
+
 div.faq-section-close i{
+
     font-size: .8rem;
     padding-right: 2rem;
+}
+
+div.faq-section-close:hover i{
+    padding-right: 1.3rem;
+    transform: scale(2);
+    color: #0093CE;
 }
 
 /* -------FOOTER------- */
@@ -582,9 +596,6 @@ section.top-footer{
     margin-top: 3rem;
 }
 
-nav.footer-navs{
-}
-
 nav.footer-navs h5{
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
@@ -601,6 +612,10 @@ nav.footer-navs ul li a{
     color: white;
 }
 
+nav.footer-navs ul li a:hover{
+    color: grey;
+}
+
 /* Bottom Footer */
 
 section.bottom-footer{
@@ -610,6 +625,11 @@ section.bottom-footer{
 section.bottom-footer span.languages{
     color: grey;
     font-size: .9rem;
+    cursor: pointer;
+}
+
+section.bottom-footer span.languages:hover{
+    color: white;
 }
 
 section.bottom-footer span.languages i.fa-caret-up{
