--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ h3{
 /* Nav */
 header section.nav{
     width: 100%;
+    min-width: 1348px;
     height: 70px;
     background-color: white;
 
@@ -156,10 +157,10 @@ header section.jumbo{
     max-height: 490px;
     min-height: 490px;
     width: 100%;
-    height: 75vh;
+    height: 85vh;
     background-color: #b4d0e7;
 
-    padding: 0 1rem;
+    padding: .5rem 1rem 0;
     margin-top: 70px;
 }
 
@@ -481,6 +482,7 @@ section.company-collaboration{
 div.company-collaboration-square{
     width: calc(100vw / 3 );
     height: calc(100vw / 3);
+    min-width: 449px;
     background-color: #f5f5f5;
 
     display: flex;
