--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ section.company-collaboration{
 }
 
 div.company-collaboration-square{
-    width: calc(100vw / 3 );
+    width: calc(100% / 3 );
     height: calc(100vw / 3);
     min-width: 449px;
     background-color: #f5f5f5;
@@ -497,8 +497,8 @@ div.company-collaboration-square{
 }
 
 div.company-collaboration-square-box{
-    width: calc(100% /2);
-    height: calc(100% /2);
+    width: 50%;
+    height: 50%;
 }
 
 div.company-collaboration-square-box img{
